--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="education">
         <h2 class="section-title">My Education</h2>
         <div class="resume-card">
-          <h3 class="card-titile">Master n computer Engineering</h3>
+          <h3 class="card-title">Master in computer Engineering</h3>
           <p class="card-info">Hardvard University / 2015-2017</p>
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -140,7 +140,7 @@
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-titile">Master n computer Engineering</h3>
+          <h3 class="card-title">Master in computer Engineering</h3>
           <p class="card-info">Hardvard University / 2015-2017</p>
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -148,7 +148,7 @@
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-titile">Master n computer Engineering</h3>
+          <h3 class="card-title">Master in computer Engineering</h3>
           <p class="card-info">Hardvard University / 2015-2017</p>
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -159,7 +159,7 @@
 
 
       <div class="experience">
-        <h2 class="section-titie">My Experience</h2>
+        <h2 class="section-title">My Experience</h2>
         <div class="resume-card">
           <h3 class="card-title">Sr. Font End Developer</h3>
 
@@ -167,6 +167,7 @@
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
+        <hr>
 
         <div class="resume-card">
           <h3 class="card-title">Jr. Font End Developer</h3>
@@ -175,13 +176,16 @@
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor..</p>
         </div>
+        <hr>
         <div class="resume-card">
           <h3 class="card-title">HTML Developer</h3>
 
           <p class="card-info">Adobe Inc / 2017 - 2018</p>
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <hr>
         </div>
+
 
 
       </div>
