--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 
@@ -34,9 +39,9 @@
           moments.</p>
 
         <div>
-          <button class="btn">Download CV</button>
+          <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
 
-          <button class="btn">Contact</button>
+          <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
 
 
@@ -154,7 +159,6 @@
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 
         </div>
-        <hr>
       </div>
 
 
@@ -183,14 +187,48 @@
           <p class="card-info">Adobe Inc / 2017 - 2018</p>
           <p class="card-text">List skill/technologies here. You can change the icon above
             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-          <hr>
         </div>
 
 
 
       </div>
     </div>
+    <div class="rockstar">
+      <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+    </div>
   </section>
+  <footer>
+    <section class="footer-container">
+      <div class="social">
+        <h2>Lets Connect</h2>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
+          through
+          Friday.</p>
+        <div class="icons">
+          <a href=""><img src="images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="images/icons/twitter.png" alt=""></a>
+          <a href=""><img src="images/icons/insta.png" alt=""></a>
+        </div>
+      </div>
+      <form class="form">
+        <h2>Let’s Message me</h2>
+        <div class="">
+          <input type="text" name="" id="" placeholder="Your Name">
+        </div>
+        <div class="">
+          <input type="text" name="" id="" placeholder="Your Email">
+        </div>
+
+        <div class="">
+          <textarea rows="10" name="" id="" placeholder="Message"></textarea>
+        </div>
+        <input class="btn" type="submit" value="submit">
+
+
+      </form>
+
+    </section>
+  </footer>
 
 </body>
 
